--- a/index.html
+++ b/index.html
@@ -318,9 +318,10 @@
   <script src="modules/csvParser.js?v=4"></script>
   <script src="modules/equivalentScalesData.js?v=4"></script>
   <script src="modules/instruments.js?v=4"></script>
-  <script src="modules/fretboardCanvas.js?v=5"></script>
-  <script src="modules/controlPanel.js?v=21"></script>
+  <script src="modules/audioPlayer.js?v=4"></script>
+  <script src="modules/fretboardCanvas.js?v=7"></script>
+  <script src="modules/controlPanel.js?v=27"></script>
   <script src="modules/exportManager.js?v=4"></script>
-  <script src="app.js?v=8"></script>
+  <script src="app.js?v=13"></script>
 </body>
 </html>
